Made into java project